# klibc-kinit-standalone

./: README.md  capabilities.c  devname.c  do_mounts.c  do_mounts.h  do_mounts_md.c  initrd.c  kinit.c  meson.build  ramdisk_load.c  readfile.c
fstype/: fstype.c  meson.build
ipconfig/: bootp_proto.c  dhcp_proto.c  main.c  meson.build  netdev.h  packet.c
nfsmount/: .test.c.swp  bindresvport.c  dummypmap.c  main.c  main_standalone.c  meson.build  mount.c  sunrpc.c  sunrpc.h
resume/: meson.build  resume.c  resumelib.c
run-init/: meson.build  runinitlib.c
